--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,9 +17,11 @@ jobs:
         with:
           python-version: '3.8'
           architecture: 'x64'
-      - name: Install requirements
-        # Устанавливаем зависимости
-        run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run tests
         run: coverage run ArchiTanks/tests/tests.py
       - name: Tests report
