--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
+          pip install coverage
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run tests
         run: coverage run ArchiTanks/tests/tests.py
