--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,6 @@ jobs:
           pip install coverage
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run tests
-        run: coverage run ArchiTanks/tests.py
+        run: coverage run src/tests/tests.py
       - name: Tests report
         run: coverage report
