--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,6 @@ jobs:
         run: |
           pip install coverage
           export PYTHONPATH=ArchiTanks
-          coverage
+          coverage run
       - name: Tests report
         run: coverage report
