--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,6 @@ jobs:
       - name: Run tests
         run: |
           pip install coverage
-          export PYTHONPATH=ArchiTanks
-          coverage run
+          coverage run -m unittest tests.py
       - name: Tests report
         run: coverage report
